--- a/src/index.html
+++ b/src/index.html
@@ -3,19 +3,28 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Заголовок страницы</title>
+    <title>Homework 13</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
       integrity="sha512-ISS7cAi1PEhQ8jnbJpJZMd29NlhNj4AWYyLOSp2CE/CsHxTCu+r+t0D2yoJudVrd0/8fTVPUVDzY5Tvli75u/g=="
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="./styles.css">
   </head>
   <body>
-    <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
-    <include src="./partials/example.html"></include>
-
-    <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
+    <form class="form js-form">
+      <div class="form-div">
+        <label for="searchQuery" class="label-form">Что ищем?</label>
+        <input type="text" class="form-input" id="searchQuery" placeholder="Введите запрос" autocomplete="off">
+      </div>
+      <button type="submit" class="btn btn-primary">Искать</button>
+    </form>
+    <ul class="pictures js-pictures-container"></ul>
+    <button type="button" class="btn btn-primary button">
+      <span class="spinner-border spinner is-hidden" role="status" aria-hidden="true"></span>
+      <span class="lebel">Загрузить еще</span>
+    </button>
     <script src="./index.js"></script>
   </body>
 </html>
